[project]
name = "03-agentic-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "scalar-fastapi>=1.8.2",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
